fix all dynamic spacing

--- a/app/assets/stylesheets/components/_categories.scss
+++ b/app/assets/stylesheets/components/_categories.scss
@@ -1,11 +1,13 @@
 .c-categories{
     padding: 11.5px 100px;
+    //padding: 0.75vw 4vw;
     border-bottom: 1px solid rgb(229, 229, 229);
     font-family: 'Roboto', Arial, Helvetica, sans-serif;
 }
 
 .c-category-section{
     display: flex;
+    overflow: hidden;
 }
 
 .c-category {
