--- a/app/assets/stylesheets/components/_comment_form.scss
+++ b/app/assets/stylesheets/components/_comment_form.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     height: 125px;
+    width: 67vw
 }
 
 .cf-top{
@@ -51,11 +52,11 @@
 
 .cf-info{
     padding-left: 20px;
-    width: 1220px;
+    //width: 1220px;
 }
 
 .cf-input{
-    width: 1210px;
+    width: 63vw;
 }
 
 .cf-input-text{
