--- a/app/assets/stylesheets/components/_video_show.scss
+++ b/app/assets/stylesheets/components/_video_show.scss
@@ -5,13 +5,15 @@
 
 .video-show{
     background-color: rgb(249, 249, 249);
-    width: 100%;
+    //width: 100%;
 }
 
 .vs-bottom{
     display: flex;
+    //width: 67.5vw;
 }
 
 .vs-videocolumn{
     padding-left: 105px;
+    width: 67.5vw;
 }
