--- a/app/assets/stylesheets/components/_video_watch.scss
+++ b/app/assets/stylesheets/components/_video_watch.scss
@@ -1,10 +1,10 @@
 .vw-src{
-    width: 1280px;
-    height: 720px;
+    width: 66.75vw;
+    height: 76.75vh;
 }
 
 .vw-main{
-    width: 1280px;
-    height: 720px;
+    width: 66.75vw;
+    height: 76.75vh;
     padding-top: 24px;
 }
