--- a/app/assets/stylesheets/components/_video_watch_bottom.scss
+++ b/app/assets/stylesheets/components/_video_watch_bottom.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     // background-color: green;
-    width: 1280px;
+    width: 66.6vw;
 }
 
 .vw-info{
